--- a/FacturacionFerreteriaRepositorioBDII/src/Empleados/EmpleadoINternal1.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/Empleados/EmpleadoINternal1.form
@@ -33,7 +33,7 @@
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
+              <Component id="btnCancelar" min="-2" pref="119" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Component id="btnGuardar" min="-2" pref="120" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
@@ -81,19 +81,28 @@
                       <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblEstado" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="Estado" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="PNombre" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="Rol" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" alignment="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="SNombre" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="SApellido" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="PApellido" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="Cedula" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="Estado" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="PNombre" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="Rol" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="SNombre" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="SApellido" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="PApellido" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="Cedula" alignment="0" pref="220" max="32767" attributes="0"/>
+                              <Component id="NombreUsuario" alignment="0" max="32767" attributes="0"/>
+                              <Component id="Password" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -128,9 +137,19 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" alignment="0" pref="102" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" alignment="0" pref="44" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="NombreUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="Password" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Rol" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -186,9 +205,11 @@
         <Component class="javax.swing.JComboBox" name="Rol">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="4">
                 <StringItem index="0" value="Administrador"/>
                 <StringItem index="1" value="Cajero"/>
+                <StringItem index="2" value="Encargado de venta"/>
+                <StringItem index="3" value="Encargado de bodega"/>
               </StringArray>
             </Property>
           </Properties>
@@ -242,6 +263,23 @@
             </Property>
           </Properties>
         </Component>
+        <Component class="javax.swing.JLabel" name="jLabel8">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Nombre usuario"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="NombreUsuario">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NombreUsuarioActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel9">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="Password">
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel2">
@@ -273,7 +311,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="lblFoto" pref="392" max="32767" attributes="0"/>
+                  <Component id="lblFoto" pref="437" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnCargarFoto" alignment="3" min="-2" max="-2" attributes="0"/>
