--- a/FacturacionFerreteriaRepositorioBDII/src/Venta/FacturaInternal.form
+++ b/FacturacionFerreteriaRepositorioBDII/src/Venta/FacturaInternal.form
@@ -140,7 +140,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="fe" green="fe" red="fe" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="RUC : "/>
+            <Property name="text" type="java.lang.String" value="RUC : 0011024560009Q"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel13">
